Network request with Alamofire

--- a/Networking/IBuilder/Base.lproj/Main.storyboard
+++ b/Networking/IBuilder/Base.lproj/Main.storyboard
@@ -70,6 +70,7 @@
                     <connections>
                         <segue destination="86t-J8-UxA" kind="show" identifier="ShowImage" id="Qle-3J-mXo"/>
                         <segue destination="LDE-hP-zNO" kind="show" identifier="OurCourses" id="C33-eG-xPh"/>
+                        <segue destination="LDE-hP-zNO" kind="show" identifier="OurCoursesWithAlamofire" id="2hy-af-yOL"/>
                     </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="b12-QM-6L8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -252,6 +253,9 @@
             <point key="canvasLocation" x="387" y="-55"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="2hy-af-yOL"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="square.and.arrow.up.circle.fill" catalog="system" width="128" height="123"/>
         <systemColor name="opaqueSeparatorColor">
