--- a/Networking/IBuilder/Base.lproj/Main.storyboard
+++ b/Networking/IBuilder/Base.lproj/Main.storyboard
@@ -71,6 +71,7 @@
                         <segue destination="86t-J8-UxA" kind="show" identifier="ShowImage" id="Qle-3J-mXo"/>
                         <segue destination="LDE-hP-zNO" kind="show" identifier="OurCourses" id="C33-eG-xPh"/>
                         <segue destination="LDE-hP-zNO" kind="show" identifier="OurCoursesWithAlamofire" id="2hy-af-yOL"/>
+                        <segue destination="86t-J8-UxA" kind="show" identifier="ResponseData" id="zUI-mQ-Oab"/>
                     </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="b12-QM-6L8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -254,6 +255,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
+        <segue reference="Qle-3J-mXo"/>
         <segue reference="2hy-af-yOL"/>
     </inferredMetricsTieBreakers>
     <resources>
